force-app/main/default/objects/FTMSBill__c/fields/M_td_3_ma_td3_ibuying__c.field-meta.xml
<CustomField>
    <fullName>M_td_3_ma_td3_ibuying__c</fullName>
    <label>Mã td 3(ma_td3_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>