force-app/main/default/objects/FTMSBill__c/fields/M_VCS_ma_dvcs__c.field-meta.xml
<CustomField>
    <fullName>M_VCS_ma_dvcs__c</fullName>
    <label>Mã ĐVCS(ma_dvcs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>