force-app/main/default/objects/FTMSBill__c/fields/Mbphtmabphti__c.field-meta.xml
<CustomField>
    <fullName>Mbphtmabphti__c</fullName>
    <label>Mã bpht(ma_bpht_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>