force-app/main/default/objects/FTMSBill__c/fields/Mdnmavvi__c.field-meta.xml
<CustomField>
    <fullName>Mdnmavvi__c</fullName>
    <formula>Service__r.ServiceCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mã dự án(ma_vv_i)</label>
    <type>Text</type>
</CustomField>