force-app/main/default/objects/FTMSBill__c/fields/Mkttmathck__c.field-meta.xml
<CustomField>
    <fullName>Mkttmathck__c</fullName>
    <label>Mã đ/k tt(ma_thck)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>