force-app/main/default/objects/FTMSBill__c/fields/MMYY_Debit__c.field-meta.xml
<CustomField>
    <fullName>MMYY_Debit__c</fullName>
    <formula>LEFT( RIGHT( OutboundVATInvNo__c, 8), 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MMYY-Debit</label>
    <type>Text</type>
</CustomField>