force-app/main/default/objects/FTMSBill__c/fields/Mntmant__c.field-meta.xml
<CustomField>
    <fullName>Mntmant__c</fullName>
    <label>Mã n.tệ(ma_nt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>