force-app/main/default/objects/FTMSBill__c/fields/Mphmaphii__c.field-meta.xml
<CustomField>
    <fullName>Mphmaphii__c</fullName>
    <label>Mã phí(ma_phi_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>