force-app/main/default/objects/FTMSBill__c/fields/Mtd1matdi__c.field-meta.xml
<CustomField>
    <fullName>Mtd1matdi__c</fullName>
    <label>Mã td 1(ma_td_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>