force-app/main/default/objects/FTMSBill__c/fields/Mtsutmathuei__c.field-meta.xml
<CustomField>
    <fullName>Mtsutmathuei__c</fullName>
    <label>Mã t.suất(ma_thue_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>