force-app/main/default/objects/FTMSBill__c/fields/MVCSmadvcsbuying__c.field-meta.xml
<CustomField>
    <fullName>MVCSmadvcsbuying__c</fullName>
    <label>Mã ĐVCS(ma_dvcs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>