force-app/main/default/objects/FTMSBill__c/fields/n_gi_P0_gia2buying__c.field-meta.xml
<CustomField>
    <fullName>n_gi_P0_gia2buying__c</fullName>
    <label>Đơn giá:P0(gia2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>