force-app/main/default/objects/FTMSBill__c/fields/n_gi_P0_gia2selling__c.field-meta.xml
<CustomField>
    <fullName>n_gi_P0_gia2selling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Đơn giá n.tệ:P1(gia_nt2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>