force-app/main/default/objects/FTMSBill__c/fields/Ngimuahngongba__c.field-meta.xml
<CustomField>
    <fullName>Ngimuahngongba__c</fullName>
    <label>Người mua hàng(ong_ba)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>