force-app/main/default/objects/FTMSBill__c/fields/ngintP1giant2_Number__c.field-meta.xml
<CustomField>
    <fullName>ngintP1giant2_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Đơn giá n.tệ:P1(gia_nt2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>