force-app/main/default/objects/FTMSBill__c/fields/ngiP0gia2__c.field-meta.xml
<CustomField>
    <fullName>ngiP0gia2__c</fullName>
    <label>Đơn giá:P0(gia2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>