force-app/main/default/objects/FTMSBill__c/fields/Ngyctngayctbuying__c.field-meta.xml
<CustomField>
    <fullName>Ngyctngayctbuying__c</fullName>
    <label>Ngày c.từ(ngay_ct)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>