force-app/main/default/objects/FTMSBill__c/fields/OutboundInvDate__c.field-meta.xml
<CustomField>
    <fullName>OutboundInvDate__c</fullName>
    <label>Date on Debit note</label>
    <type>Date</type>
</CustomField>