force-app/main/default/objects/FTMSBill__c/fields/OutboundVATInvNo__c.field-meta.xml
<CustomField>
    <fullName>OutboundVATInvNo__c</fullName>
    <inlineHelpText>Display on ASAP&apos;s Debit Form in order to send to Customer</inlineHelpText>
    <label>Debit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>