force-app/main/default/objects/FTMSBill__c/fields/PaymentConfirmedSelling__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedSelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmed-Selling</label>
    <type>Checkbox</type>
</CustomField>