force-app/main/default/objects/FTMSBill__c/fields/PaymentNotesSelling__c.field-meta.xml
<CustomField>
    <fullName>PaymentNotesSelling__c</fullName>
    <label>Payment Notes - Selling</label>
    <type>TextArea</type>
</CustomField>