force-app/main/default/objects/FTMSBill__c/fields/PaymentSettledDateBuying__c.field-meta.xml
<CustomField>
    <fullName>PaymentSettledDateBuying__c</fullName>
    <label>Payment Settled Date - Buying</label>
    <type>Date</type>
</CustomField>