force-app/main/default/objects/FTMSBill__c/fields/PaymentSettledDateSelling__c.field-meta.xml
<CustomField>
    <fullName>PaymentSettledDateSelling__c</fullName>
    <label>Payment Settled Date - Selling</label>
    <type>Date</type>
</CustomField>