force-app/main/default/objects/FTMSBill__c/fields/PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>PaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS Bills (Payment To)</relationshipLabel>
    <relationshipName>F_TMS_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>