force-app/main/default/objects/FTMSBill__c/fields/PaymentToEqualAgent__c.field-meta.xml
<CustomField>
    <fullName>PaymentToEqualAgent__c</fullName>
    <formula>IF(AND ((NOT(ISBLANK(  PaymentTo__c ))), OR( PaymentTo__r.Id =  FTMSSO__r.Agent__r.Id,PaymentTo__r.Id  = FTMSSO__r.Agent2nd__r.Id)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paymen To = Agent</label>
    <type>Checkbox</type>
</CustomField>