force-app/main/default/objects/FTMSBill__c/fields/PaymentToFor__c.field-meta.xml
<CustomField>
    <fullName>PaymentToFor__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID(PaymentTo__r.Id),  PaymentTo__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment To - For</label>
    <type>Text</type>
</CustomField>