force-app/main/default/objects/FTMSBill__c/fields/PaymentTypeSelling__c.field-meta.xml
<CustomField>
    <fullName>PaymentTypeSelling__c</fullName>
    <label>Payment Type - Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque (Received but not Claimed)</fullName>
            </value>
            <value>
                <fullName>Cheque (Received and Claimed)</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Payment Offset</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Deposit Offset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>