force-app/main/default/objects/FTMSBill__c/fields/ProfitINCLTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxFCY__c</fullName>
    <formula>TotalSellingInclTaxFCY__c -  TotalBuyingInclTaxFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>