force-app/main/default/objects/FTMSBill__c/fields/ProfitNICTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxFCY__c</fullName>
    <formula>TotalAmountofSellingFCY__c -  TotalAmountofBuyingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit NIC Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>