force-app/main/default/objects/FTMSBill__c/fields/ProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxLocal__c</fullName>
    <formula>TotalAmountofSellingLocal__c -  TotalAmountofBuyingLocal__c</formula>
    <label>Profit NIC Tax (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>