force-app/main/default/objects/FTMSBill__c/fields/Quynctmaqs__c.field-meta.xml
<CustomField>
    <fullName>Quynctmaqs__c</fullName>
    <label>Quyển c.từ(ma_qs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>