force-app/main/default/objects/FTMSBill__c/fields/Quynctmaqsbuying__c.field-meta.xml
<CustomField>
    <fullName>Quynctmaqsbuying__c</fullName>
    <label>Quyển c.từ(ma_qs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>