force-app/main/default/objects/FTMSBill__c/fields/Quynctmaqsselling__c.field-meta.xml
<CustomField>
    <fullName>Quynctmaqsselling__c</fullName>
    <label>Quyển c.từ(ma_qs)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HD7803A</fullName>
            </value>
            <value>
                <fullName>HD7803B</fullName>
            </value>
            <value>
                <fullName>NHAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>