force-app/main/default/objects/FTMSBill__c/fields/S_d_ng_H_T_sd_hddt_ynbuying__c.field-meta.xml
<CustomField>
    <fullName>S_d_ng_H_T_sd_hddt_ynbuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sử dụng HĐĐT(sd_hddt_yn)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>