force-app/main/default/objects/FTMSBill__c/fields/S_l_ng_Q_so_luongselling__c.field-meta.xml
<CustomField>
    <fullName>S_l_ng_Q_so_luongselling__c</fullName>
    <formula>text( ChargeQuantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Số lượng:Q(so_luong)</label>
    <type>Text</type>
</CustomField>