force-app/main/default/objects/FTMSBill__c/fields/SdngHTsdhddtyn__c.field-meta.xml
<CustomField>
    <fullName>SdngHTsdhddtyn__c</fullName>
    <label>Sử dụng HĐĐT(sd_hddt_yn)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>