force-app/main/default/objects/FTMSBill__c/fields/SellingBankTrxCode__c.field-meta.xml
<CustomField>
    <fullName>SellingBankTrxCode__c</fullName>
    <label>Selling Bank Trx Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>