force-app/main/default/objects/FTMSBill__c/fields/Shsoctselling__c.field-meta.xml
<CustomField>
    <fullName>Shsoctselling__c</fullName>
    <label>Số hđ(so_ct)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>