force-app/main/default/objects/FTMSBill__c/fields/SlngQsoluong__c.field-meta.xml
<CustomField>
    <fullName>SlngQsoluong__c</fullName>
    <formula>TEXT( ChargeQuantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Số lượng:Q(so_luong)</label>
    <type>Text</type>
</CustomField>