force-app/main/default/objects/FTMSBill__c/fields/T_gi_R_ty_giabuying__c.field-meta.xml
<CustomField>
    <fullName>T_gi_R_ty_giabuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tỷ giá:R(ty_gia)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>