force-app/main/default/objects/FTMSBill__c/fields/T_l_ck_tl_ckbuying__c.field-meta.xml
<CustomField>
    <fullName>T_l_ck_tl_ckbuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tỷ lệ ck  (%)(tl_ck)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>