force-app/main/default/objects/FTMSBill__c/fields/T_n_h_h_a_d_v_ten_vtbuying__c.field-meta.xml
<CustomField>
    <fullName>T_n_h_h_a_d_v_ten_vtbuying__c</fullName>
    <label>Tên h.hóa, d.vụ(ten_vt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>