force-app/main/default/objects/FTMSBill__c/fields/TaxIncluded__c.field-meta.xml
<CustomField>
    <fullName>TaxIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Included - Selling</label>
    <type>Checkbox</type>
</CustomField>