force-app/main/default/objects/FTMSBill__c/fields/TaxIncludedBuying__c.field-meta.xml
<CustomField>
    <fullName>TaxIncludedBuying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Included - Buying</label>
    <type>Checkbox</type>
</CustomField>