force-app/main/default/objects/FTMSBill__c/fields/TextFTMSSOID__c.field-meta.xml
<CustomField>
    <fullName>TextFTMSSOID__c</fullName>
    <label>Text F/TMS SO ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>