force-app/main/default/objects/FTMSBill__c/fields/TgiRtygia__c.field-meta.xml
<CustomField>
    <fullName>TgiRtygia__c</fullName>
    <label>Tỷ giá:R(ty_gia)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>