force-app/main/default/objects/FTMSBill__c/fields/Th_nh_ti_n_N0_tien2buying__c.field-meta.xml
<CustomField>
    <fullName>Th_nh_ti_n_N0_tien2buying__c</fullName>
    <label>Thành tiền:N0(tien2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>