force-app/main/default/objects/FTMSBill__c/fields/Th_nh_ti_n_N0_tien2selling__c.field-meta.xml
<CustomField>
    <fullName>Th_nh_ti_n_N0_tien2selling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Thành tiền n.tệ:N1(tien_nt2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>