force-app/main/default/objects/FTMSBill__c/fields/ThnhtinN0tien2__c.field-meta.xml
<CustomField>
    <fullName>ThnhtinN0tien2__c</fullName>
    <label>Thành tiền:N0(tien2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>