force-app/main/default/objects/FTMSBill__c/fields/ThnhtinntN1tiennt2_Number__c.field-meta.xml
<CustomField>
    <fullName>ThnhtinntN1tiennt2_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Thành tiền n.tệ:N1(tien_nt2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>