force-app/main/default/objects/FTMSBill__c/fields/ThnhtinntN1tiennt2buying__c.field-meta.xml
<CustomField>
    <fullName>ThnhtinntN1tiennt2buying__c</fullName>
    <formula>TotalAmountofBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thành tiền:N0(tien2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>