force-app/main/default/objects/FTMSBill__c/fields/Thusutthuesuatibuying__c.field-meta.xml
<CustomField>
    <fullName>Thusutthuesuatibuying__c</fullName>
    <formula>TEXT(TaxRateBuying__c*100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thuế suất(thue_suati)</label>
    <type>Text</type>
</CustomField>