force-app/main/default/objects/FTMSBill__c/fields/Thusutthuesuatiselling__c.field-meta.xml
<CustomField>
    <fullName>Thusutthuesuatiselling__c</fullName>
    <formula>text(TaxRateSelling__c*100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thuế suất(thue_suati)</label>
    <type>Text</type>
</CustomField>