force-app/main/default/objects/FTMSBill__c/fields/Ti_n_ck_N0_ckbuying__c.field-meta.xml
<CustomField>
    <fullName>Ti_n_ck_N0_ckbuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tiền ck:N0(ck)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>