force-app/main/default/objects/FTMSBill__c/fields/Ti_n_ck_n_t_N1_ck_ntselling__c.field-meta.xml
<CustomField>
    <fullName>Ti_n_ck_n_t_N1_ck_ntselling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tiền ck n.tệ:N1(ck_nt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>