force-app/main/default/objects/FTMSBill__c/fields/Ti_n_thu_n_t_N1_thue_ntbuying__c.field-meta.xml
<CustomField>
    <fullName>Ti_n_thu_n_t_N1_thue_ntbuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tiền thuế n.tệ:N1(thue_nt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>