force-app/main/default/objects/FTMSBill__c/fields/TinckN0ck__c.field-meta.xml
<CustomField>
    <fullName>TinckN0ck__c</fullName>
    <label>Tiền ck:N0(ck)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>