force-app/main/default/objects/FTMSBill__c/fields/TinckntN1cknt__c.field-meta.xml
<CustomField>
    <fullName>TinckntN1cknt__c</fullName>
    <label>Tiền ck n.tệ:N1(ck_nt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>