force-app/main/default/objects/FTMSBill__c/fields/TinthuntN1thuent__c.field-meta.xml
<CustomField>
    <fullName>TinthuntN1thuent__c</fullName>
    <label>Tiền thuế n.tệ:N1(thue_nt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>