force-app/main/default/objects/FTMSBill__c/fields/Tk_ck_tk_ckbuying__c.field-meta.xml
<CustomField>
    <fullName>Tk_ck_tk_ckbuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tk ck(tk_ck)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>