force-app/main/default/objects/FTMSBill__c/fields/Tk_dt_tk_dtselling__c.field-meta.xml
<CustomField>
    <fullName>Tk_dt_tk_dtselling__c</fullName>
    <label>Tk dt(tk_dt)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>51131</fullName>
            </value>
            <value>
                <fullName>51132</fullName>
            </value>
            <value>
                <fullName>511341</fullName>
            </value>
            <value>
                <fullName>511342</fullName>
            </value>
            <value>
                <fullName>51133</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>