force-app/main/default/objects/FTMSBill__c/fields/Tkcktkck__c.field-meta.xml
<CustomField>
    <fullName>Tkcktkck__c</fullName>
    <label>Tk ck(tk_ck)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>