force-app/main/default/objects/FTMSBill__c/fields/Tkdttkdt__c.field-meta.xml
<CustomField>
    <fullName>Tkdttkdt__c</fullName>
    <label>Tk dt(tk_dt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>