force-app/main/default/objects/FTMSBill__c/fields/Tknmanx__c.field-meta.xml
<CustomField>
    <fullName>Tknmanx__c</fullName>
    <label>Tk nợ(ma_nx)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>